[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/UI/BE_Blank.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/CH_Heart.png" type="Texture" id=2]
[ext_resource path="res://prefabs/Charms/CharmOption_Heart.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="CharmOption_Heart" type="Area2D"]
scale = Vector2( 0.481353, 0.481353 )
gravity = 0.0
script = ExtResource( 3 )
path = "res://Sprites/UI/CH_Heart.png"

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.179712, 0.179712 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="TestSprite" type="Sprite" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_shape_entered" from="." to="." method="_on_MoodHeart_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_MoodHeart_area_shape_exited"]
